# pys3b

./: AGENTS.md  AGENTS_PLAN.md  CHANGELOG.md  CLAUDE.md  README.md  __main__.py  pyproject.toml
s3_browser/: __init__.py  __main__.py  controller.py  models.py  presenter.py  profiles.py  qt_view.py  services.py  settings.py  tk_view.py  ui_utils.py
tests/: test_controller.py  test_profiles.py  test_services.py  test_settings.py  test_tk_view_utils.py  test_ui_utils.py
